scrollbar has been fixed

--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
 html {
   min-height: 100vh;
   position: relative;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 body {
   min-height: 100vh;
